Continued editing the russian translation Fixed css issue in comments titles, when long non-English words overlap the text

--- a/root/static/mojomojo.css
+++ b/root/static/mojomojo.css
@@ -560,6 +560,10 @@ dd {
   margin-left: 80px;
 }
 
+div#comments div.comment dd {
+  margin-left: 120px;
+}
+
 /* Common Forms Rules */
 
 .standard_form .fields label {
@@ -745,11 +749,6 @@ a.footnote:after {
 
 #content img.right {
     margin-left: 1em;
-    float: right;
-}
-#content img.left {
-    margin-left: 1em;
-    float: left;
 }
 
 #searchField {
